--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "redis-om": "^0.4.3"
+    "redis-om": "^0.4.3",
+    "vercel": "^32.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
